changed all footers to amend an overflow issue I was having on my responsive screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,6 +132,9 @@ h1, h2{
 .abouttitle{
    font-family: 'Shippori Mincho B1', serif;
 }
+.brand-planet{
+     font-family: 'Shippori Mincho B1', serif;
+}
 
 .beautynature{
     font-family: 'Homemade Apple', sans-serif;
